Removed followers a friends colelct to speed up collection of tweets, will add a seporate method to collect them after.

--- a/twitterPageExample.html
+++ b/twitterPageExample.html
@@ -46,12 +46,11 @@
           <a class="account-group js-account-group js-action-profile js-user-profile-link js-nav" href="/incrediblyEU" data-user-id="91890954">
     <img class="avatar js-action-profile-avatar" src="https://pbs.twimg.com/profile_images/825482475656863748/T4BENptR_bigger.jpg" alt="">
     <span class="FullNameGroup">
-      <strong class="fullname show-popup-with-id " data-aria-label-part="">incrediblyEU</strong><span>&rlm;</span><span class="UserBadges"></span><span class="UserNameBreak">&nbsp;</span></span>
-      
-      <span class="username u-dir" dir="ltr" data-aria-label-part="">@<b>incrediblyEU</b></span></a>
+      <strong class="fullname show-popup-with-id " data-aria-label-part="">incrediblyEU</strong><span>&rlm;</span><span class="UserBadges"></span><span class="UserNameBreak">&nbsp;</span></span><span class="username u-dir" dir="ltr" data-aria-label-part="">@<b></b></span></a>
 
 
-      <span class="username js-action-profile-name" data-aria-label-part=""><s>@</s><b>edsheeran</b></span>
+      <!--OLD VERSION-->
+      <!--<span class="username js-actíon-profile-name" data-aria-label-part=""><s>@</s><b></b></span>-->
 
         
         <small class="time">
